Fix header font weight on Firefox

--- a/styles/pages/_front.scss
+++ b/styles/pages/_front.scss
@@ -81,6 +81,10 @@
     margin-top: 0;
   }
 
+  .front-header, .front-motto {
+    font-weight: 400;
+  }
+
   .front__heading {
     width: 100%;
 
